Worked out some problems with the vertical slider. Still a minor styling issue with it being slightly too low in its host element.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,110 +1,101 @@
-/*
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
- */
+/* Don't include borders, margins, etc in calculation of height and weight of
+   elements. This may not be necessary or desirable. */
+
 * {
-    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-body {
-    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
-    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#E4E4E4;
-    background-image:linear-gradient(to bottom, #A7A7A7 0%, #E4E4E4 51%);
-    font-family: system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
-    font-size:12px;
-    height:100vh;
-    margin:0px;
-    padding:0px;
-    /* Padding to avoid the "unsafe" areas behind notches in the screen */
-    padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-left, 0px);
-    text-transform:uppercase;
-    width:100%;
+:root {
+    --bar-height: 40px;
 }
 
-/* Portrait layout (default) */
-.app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-    height:50px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+.topbar {
+    height: var(--bar-height);
+    color: white;
+    background-color: purple;
+    text-align: center;
 }
 
-/* Landscape layout (with min-width) */
-@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
-    .app {
-        background-position:left center;
-        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
-        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
-                                      /* offset horizontal: half of image width and text area width */
-    }
+.content {
+    /* outline: dotted black; */
+    background-color: white;
+    height: calc(100vh - var(--bar-height) * 2);
+    overflow-y: auto;
+    padding: 2%;
 }
 
-h1 {
-    font-size:24px;
-    font-weight:normal;
-    margin:0px;
-    overflow:visible;
-    padding:0px;
-    text-align:center;
+.content::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
-.event {
-    border-radius:4px;
-    color:#FFFFFF;
-    font-size:12px;
-    margin:0px 30px;
-    padding:2px 0px;
+.statusbar {
+    width: 100%;
+    height: var(--bar-height);
+    color: white;
+    background-color: purple;
+    text-align: center;
 }
 
-.event.listening {
-    background-color:#333333;
-    display:block;
+/* For mobile phones: */
+[class*="col-"] {
+    /* width: 100%; */
+    float: left;
 }
 
-.event.received {
-    background-color:#4B946A;
-    display:none;
+.aside {
+    display: none;
+    float: left;
+    width: 25%;
+    height: 100%;
+    background-color: white;
+    overflow: hidden;
 }
 
-#deviceready.ready .event.listening { display: none; }
-#deviceready.ready .event.received { display: block; }
-
-@keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
-}
-
-.blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
+.deck-panel {
+    float: left;
+    height: 100%;
+    width: 70%;
 }
 
 
-@media screen and (prefers-color-scheme: dark) {
-    body {
-        background-image:linear-gradient(to bottom, #585858 0%, #1B1B1B 51%);
-    }
+flash-card-deck {
+    width: 100%;
+    height: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .aside { display: block; }
+}
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+}
+
+@font-face {
+    font-family: IMFellGreatPrimer;
+    src: url(/font/IMFellGreatPrimerSC-Regular.ttf);
+  }
+
+@font-face {
+    font-family: HandTIMES;
+    src: url(/font/HandTIMES.ttf);
+}
+
+@font-face {
+    font-family: Freeride;
+    src: url(/font/Freeride.otf);
+}
+
+@font-face {
+    font-family: Jancient;
+    src: url(/font/JANCIENT.TTF);
+}
+
+html * {
+    font-family: Jancient;
 }
